--- a/2-Linear-networks/Exercise/logistic-regression.ipynb
+++ b/2-Linear-networks/Exercise/logistic-regression.ipynb
@@ -272,7 +272,8 @@
    "outputs": [],
    "source": [
     "class LinearModel(nn.Module):\n",
-    "    #TODO One linear layer and Sigmoid to the ouput"
+    "    pass\n",
+    "    #TODO One linear layer and Sigmoid to the output"
    ]
   },
   {
@@ -298,7 +299,7 @@
    },
    "outputs": [],
    "source": [
-    "num_epochs = 400 # should be more than enought, but can be changed\n",
+    "num_epochs = 400 # should be more than enough, but can be changed\n",
     "lr = 3e-3 # e.q to 0.003, you can change it if needed\n",
     "\n",
     "net = #TODO\n",
@@ -370,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
