--- a/4-CNN/Slides/4-ImageNet_and_AlexNet.ipynb
+++ b/4-CNN/Slides/4-ImageNet_and_AlexNet.ipynb
@@ -103,9 +103,34 @@
     "    \n",
     "    def __init__(self):\n",
     "        super(AlexNet, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(3, 96, 11, stride=4)\n",
+    "        self.conv2 = nn.Conv2d(96, 256, 5, padding=2)\n",
+    "        self.conv3 = nn.Conv2d(256, 384, 3, padding=1)\n",
+    "        self.conv4 = nn.Conv2d(384, 384, 3, padding=1)\n",
+    "        self.conv5 = nn.Conv2d(384, 256, 3, padding=1)\n",
+    "        self.fc1  = nn.Linear(256 * 5 * 5, 4096)\n",
+    "        self.fc2  = nn.Linear(4096, 4096)\n",
+    "        self.fc3 = nn.Linear(4096, 1000)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.dropout = nn.Dropout(0.5)\n",
+    "        self.max_pool = nn.MaxPool2d(kernel_size=3, stride=2)\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        pass"
+    "        x = self.relu(self.conv1(x))\n",
+    "        x = self.max_pool(x)\n",
+    "        x = self.relu(self.conv2(x))\n",
+    "        x = self.max_pool(x)\n",
+    "        x = self.relu(self.conv3(x))\n",
+    "        x = self.relu(self.conv4(x))\n",
+    "        x = self.relu(self.conv5(x))\n",
+    "        x = self.max_pool(x)\n",
+    "        x = x.reshape(x.size(0), -1)\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.dropout(x)\n",
+    "        x = self.relu(self.fc2(x))\n",
+    "        x = self.dropout(x)\n",
+    "        return self.fc3(x)\n",
+    "        "
    ]
   },
   {
@@ -113,7 +138,20 @@
    "execution_count": 3,
    "id": "282b72f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0194, -0.0063,  0.0087,  ...,  0.0005,  0.0013,  0.0267],\n",
+       "        [ 0.0098, -0.0094,  0.0208,  ..., -0.0051,  0.0198,  0.0222]],\n",
+       "       grad_fn=<AddmmBackward>)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "net = AlexNet()\n",
     "net(torch.randn(2, 3, 224, 224))"
